# auto_coin

./: .dockerignore  .env.example  .gitignore  2026.04.23.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  REVIEW.md  docker-compose.yml  minute30_work_log.md  pyproject.toml
deploy/: README.md  auto_coin.plist  com.sj9608.auto_coin.plist  install_launchd.sh
docs/: 2026.04.18-walk-forward-grid-atr-추가-내용수정.md  2026.04.18-새_전략군_방향_확정-내용수정.md  2026.04.19-B2-portfolio-aware-infra-내용수정.md  2026.04.19-B3-CSMOM-stage1-stage2-내용수정.md  2026.04.19-B4-CSMOM-stage3-stage4-내용수정.md  2026.04.19-B5-CSMOM-decomposition-v2-내용수정.md  2026.04.19-B6-CSMOM-v3-stability-final-내용수정.md  GUIDE.md  HANDOFF.md  TASK_DELEGATION.md  pyupbit_api_summary.md  upbit_api_detailed_request_response.md  upbit_api_link.md  upbit_websocket_doc.md  수익성_검증_액션_체크리스트.md  전략_검토_화면_핸드오프_2026-04-15.md  전략_백테스트_개발_가이드.md  합성전략_운용_가이드.md
reports/: 2026-04-14-paper-day1.md  2026-04-21-strategy-candidate-validation.json  2026-04-22-rcdb-stage12.json  2026-04-22-rcdb-v11-stage2.json  2026-04-22-rcdb-v12-stage2.json  2026-04-22-rcdb-v2-stage2.json  2026-04-23-regime-pullback-continuation-30m-stage2.json  2026-04-23-regime-reclaim-1h-stage2.json  2026-04-23-regime-reclaim-30m-v11-stage2.json  2026-04-23-regime-relative-breakout-30m-stage2.json  2026-04-23-regime-relative-breakout-30m-walk-forward.json  2026-04-23-regime-relative-breakout-30m-wf-diagnostics.json  2026-04-23-regime-relative-strength-event-study.json  2026-04-24-volatility-breakout-actual-fill-exit-overlay-replay.json  2026-05-03-vwap-ema-pullback-p1.json  (+23 more)
(+224 files in other folders)
