[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_coin"
version = "0.1.0"
description = "Upbit KRW market auto-trading bot (volatility breakout MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyupbit>=0.2.34",
    "pandas>=2.2",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "requests>=2.31",
    "python-dotenv>=1.0",
    # V2 web console
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlmodel>=0.0.22",
    "cryptography>=43.0",
    "bcrypt>=4.0",
    "pyotp>=2.9",
    "qrcode[pil]>=7.4",
    "itsdangerous>=2.2",
    "markdown2>=2.5",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
auto-coin = "auto_coin.main:main"
auto-coin-backtest = "auto_coin.backtest.runner:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Depends()/Form()을 기본값으로 받는 것은 FastAPI 표준 관용구라 허용
ignore = ["E501", "B008"]
